--- a/package.json
+++ b/package.json
@@ -25,5 +25,15 @@
     "videojs-contrib-quality-levels": "^2.1.0",
     "videojs-hls-quality-selector": "^1.1.4"
   },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "postcss": "^8.2.10",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.2.4",
+    "video.js": "^7.11.8"
+  },
   "license": "MIT"
 }
